// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutComponents should match a snapshot for AppNavContainer 1`] = `
<div
  className="app-nav-container"
  data-test=""
>
  <Placeholder
    text="AppNavContainer"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for Content 1`] = `
<div
  className="content"
  data-test=""
>
  <Placeholder
    text="Content"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for FlexContainerBasic 1`] = `
<div
  className="container-flex"
>
  <Placeholder
    text="FlexContainerBasic"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for FlexContainerResponsive 1`] = `
<div
  className="container"
>
  <Placeholder
    text="FlexContainerResponsive"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for Grid 1`] = `
<div
  className="columns"
  data-test=""
>
  <Placeholder
    text="Grid"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for GridFourCol 1`] = `
<div
  className="columns is-multiline"
  data-test=""
>
  <Placeholder
    text="GridFourCol"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for GridFourColItem 1`] = `
<div
  className="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
  data-test=""
>
  <Placeholder
    text="GridFourColItem"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for GridItem 1`] = `
<div
  className="column"
  data-test=""
>
  <Placeholder
    text="GridItem"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for GridThreeColItem 1`] = `
<div
  className="column is-multiline is-half-tablet is-one-third-widescreen"
  data-test=""
>
  <Placeholder
    text="GridThreeColItem"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for Level 1`] = `
<div
  className="level"
  data-test=""
>
  <Placeholder
    text="Level"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for LevelItem 1`] = `
<div
  className="level-item"
  data-test=""
>
  <Placeholder
    text="LevelItem"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for LevelLeft 1`] = `
<div
  className="level-left"
  data-test=""
>
  <Placeholder
    text="LevelLeft"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for LevelRight 1`] = `
<div
  className="level-right"
  data-test=""
>
  <Placeholder
    text="LevelRight"
  />
</div>
`;

exports[`LayoutComponents should match a snapshot for Section 1`] = `
<section
  className="section has-padding has-margin has-background"
  data-test=""
>
  <Placeholder
    text="Section"
  />
</section>
`;
